# streaming-whisper

./: .gitignore  Agent.ipynb  CONFIGURATION.md  IMPROVEMENT_PLAN.md  PHASE_1_1_COMPLETION.md  PHASE_1_2_COMPLETION.md  PHASE_1_3_COMPLETION.md  PHASE_1_4_COMPLETION.md  PHASE_2_1_COMPLETION.md  README.md  TTS.py  api.py  main.py  pyproject.toml  run_dev.bat  transcription.py
mcps/: main.py  pyproject.toml
src/api/: __init__.py  endpoints.py  main.py
src/config/: __init__.py  agent_config.py  settings.py
src/core/: __init__.py  agent.py  transcription.py
src/services/: __init__.py  agent_service.py  transcription_service.py  websocket_manager.py
src/utils/: __init__.py  logging.py
src/web/static/: index.html
transcriptions/: 1758404760528.json  1758406262075.json  transcription_1758411985647.json
