[project]
name = "streaming-whisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "sounddevice>=0.5.2",
    "faster-whisper>=1.0.0",
    "fastapi[standard]>=0.116.1",
    "pydub>=0.25.1",
    "semantic-kernel[mcp]>=1.36.0",
    "pydantic-settings>=2.0.0",
    "ollama>=0.5.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
